Chris Initial Commit, HTML Structure for Search bar div.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
             </div>
           </div>
         </aside>
+        <div class="main-container">
+            <div class="searchDiv">
+                <div class="toggle"></div>
+                <div class="search-bar"></div>
+                <div class="user"></div>
+            </div>
+        </div>
     </header>
 </body>
 </html>
