created the top search bar div

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <!-- Hello welcome -->
+    <main>
     <header>
         <!-- left sidebar -->
         <aside class="left">
@@ -58,13 +59,24 @@
             </div>
           </div>
         </aside>
+    </header>
         <div class="main-container">
             <div class="searchDiv">
-                <div class="toggle"></div>
-                <div class="search-bar"></div>
-                <div class="user"></div>
+                <div class="toggle">
+                        <div class="toggle-button"></div>
+                        <i id="toggle-icon" class="fa-solid fa-sun-bright"></i>
+                    </div>
+                    <div class="search-bar">
+                        <i id="search-icon"class="fa-solid fa-magnifying-glass"></i>
+                    </div>
+                    <div class="user">
+                        <p>User Name</p>
+                        <div class="profile">
+                            <i class="fa-solid fa-user" id="user"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-    </header>
-</body>
+        </main>
+    </body>
 </html>
