bottom footer section worked on

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
         <div class="main-container">
             <div class="searchDiv">
                 <div class="toggle">
-                        <div class="toggle-button"></div>
-                        <i id="toggle-icon" class="fa-solid fa-sun-bright"></i>
+                    <div class="toggle-button"></div>
+                    <i id="toggle-icon" class="fa-solid fa-brightness"></i>
                     </div>
                     <div class="search-bar">
-                        <i id="search-icon"class="fa-solid fa-magnifying-glass"></i>
+                        <i id="search-icon" class="fa-solid fa-magnifying-glass"></i>
                     </div>
                     <div class="user">
                         <p>User Name</p>
@@ -76,7 +76,36 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div><!-- end main-container -->
+            <footer>
+                <div class="companyLogo">
+                    <div class="cLogo">
+                        <div class="logo">
+                            <p>Company</p>
+                            <p>Logo</p> 
+                        </div>
+                    </div>
+                </div>
+                <div class="songInfo">
+                    <div class="songTitle">
+                        <p>This is a song Title</p>
+                    </div>
+                    <div class="lyrics">
+                        <p id="Lyrics">Lyrics</p>
+                    </div>
+                </div>
+                <div class="controls">
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-shuffle"></i>
+                    <i class="fa-solid fa-arrows-repeat"></i>
+                    <i class="fa-solid fa-backward-step"></i>
+                    <i class="fa-solid fa-circle-play"></i>
+                    <i class="fa-solid fa-forward-step"></i>
+                    <i class="fa-solid fa-repeat"></i>
+
+                </div>
+                <div class="volume"></div>
+            </footer>
         </main>
     </body>
 </html>
